test/TestPhases/parser/invalid/stringeolinsingleline.blc

@@[CInclude (header = "forall.h")]

@[CFunction (binding ="abc
def")]
extern function f()

@[CFunction (binding ="abc
def
 ghi")]
extern function g()
    

@[EntryPoint]
activity Main () ()
    f()
    await true
end